syntax = "proto3";

import "google/protobuf/empty.proto";

message EngineStatus {
  string symbol = 1;
  string status = 2;
}

message HealthCheckResponse {
  repeated EngineStatus engine_status = 1;
  string relayer_status = 2;
}

service AdminService {
  rpc HealthCheck (google.protobuf.Empty) returns (HealthCheckResponse);
}
